# EZMesh

./: .gitignore  .gitmodules  Android.bp  CMakeLists.txt  README.md  project.conf
module/: CMakeLists.txt
module/bluetooth/: CMakeLists.txt  ezmesh-bluetooth.c
module/bluetooth/cpc-bluetooth/: CMakeLists.txt
module/bluetooth/cpc-bluetooth/debconf/: postinst.in  postrm.in  prerm.in
module/bluetooth/cpc-bluetooth/debconf/services/: cpc-bluetooth.service.in
module/bluetooth/cpc-bluetooth/scripts/: startpost.in
module/bluetooth/cpc-bluetooth/src/: cpc-bluetooth.c
module/border_router/: CMakeLists.txt  openthread-core-rafael-posix-config.h
module/border_router/cmake/: options.cmake
module/border_router/cpc-otbr/: CMakeLists.txt
module/border_router/cpc-otbr/cmake/: options.cmake
module/border_router/cpc-otbr/debconf/: postinst.in  prerm.in
module/border_router/cpc-otbr/debconf/services/: cpc-otbr.in  cpc-otbr.service.in
module/border_router/cpc-otbr/debconf/services/otbr-agent.service.d/: override.conf
module/border_router/cpc-otbr/debconf/services/otbr-firewall.service.d/: override.conf
module/border_router/cpc-otbr/debconf/services/otbr-web.service.d/: override.conf
module/border_router/openthread/: CMakeLists.txt  configure.ac
module/border_router/openthread/src/cli/: cli_dns.cpp
module/border_router/openthread/src/core/: openthread-core-config.h
module/border_router/openthread/src/core/api/: border_agent_api.cpp
module/border_router/openthread/src/core/border_router/: infra_if.cpp  routing_manager.cpp  routing_manager.hpp
module/border_router/openthread/src/core/config/: openthread-core-config-check.h
module/border_router/openthread/src/core/net/: ip6_mpl.cpp  ip6_mpl.hpp
module/border_router/openthread/src/lib/: CMakeLists.txt
module/border_router/openthread/src/lib/spinel/: radio_spinel_impl.hpp
module/border_router/openthread/src/ncp/: CMakeLists.txt  ncp_base.hpp  ncp_base_mtd.cpp  ncp_hdlc.cpp  ncp_spi.cpp  radio.cmake
module/border_router/openthread/src/posix/: Makefile-posix  Makefile.am
module/border_router/openthread/src/posix/platform/: CMakeLists.txt  Makefile.am  cpc_interface.cpp  cpc_interface.hpp  ezmesh_interface.cpp  ezmesh_interface.hpp  firewall.cpp  openthread-core-rafael-posix-config.h  openthread-posix-config.h  radio.cpp  radio.hpp  radio_url.cpp  spinel_manager.cpp  spinel_manager.hpp  vendor.cmake
module/border_router/openthread/tests/unit/: test_checksum.cpp  test_child.cpp  test_cmd_line_parser.cpp  test_dns.cpp  test_dns_client.cpp  test_dso.cpp  test_hdlc.cpp  test_linked_list.cpp  test_message.cpp  test_multicast_listeners_table.cpp  test_nat64.cpp  test_ndproxy_table.cpp  test_network_data.cpp  test_priority_queue.cpp  test_routing_manager.cpp  test_spinel_buffer.cpp  test_srp_server.cpp  test_timer.cpp
module/border_router/ot-br-posix/script/: _initrc  cmake-build-android  setup
module/border_router/ot-br-posix/src/agent/: CMakeLists.txt
module/border_router/ot-br-posix/src/border_agent/: border_agent.cpp
module/border_router/ot-br-posix/src/dbus/server/: dbus_thread_object.cpp
module/border_router/ot-br-posix/src/openwrt/: otbr-agent.init.in
module/border_router/ot-br-posix/src/rest/: rest_web_server.cpp
module/check/: CMakeLists.txt  mian.c
module/controller/: CMakeLists.txt  ez_config.ini  main.c
module/controller/daemon/: controller.c  controller.h
module/controller/daemon/hdlc/: core.c  core.h
module/controller/daemon/primary/: primary.c  primary.h
module/controller/host/: hal_epoll.c  hal_epoll.h  hal_kill.c  hal_kill.h  hal_memory.c  hal_memory.h  hal_sleep.c  hal_sleep.h  hal_uart.c  hal_uart.h
module/controller/openwrt/: CMakeLists.txt  attatch_ez_hci.init.in  ezmesh.init.in  ezmesh_ble.init.in
module/controller/utility/: config.c  config.h  list.c  list.h  log.c  log.h  utility.c  utility.h  version.h.in
module/cpc/: CMakeLists.txt
module/cpc/cpcd/: CMakeLists.txt  cpcd.conf  main.c
module/cpc/cpcd-system/: CMakeLists.txt
module/cpc/cpcd-system/debconf/: config.in  postinst.in  prerm.in  templates.in
module/cpc/cpcd-system/debconf/services/: cpc-mgmt.service.in  cpcd.service.in
module/cpc/cpcd-system/scripts/: cpc-mgmt-br.in  cpc-mgmt-bt.in  cpc-mgmt.in
module/cpc/cpcd-system/src/upgrade/: cpc-upgrade.c
module/cpc/cpcd-system/src/zbbackup/: cpc-zbbackup.c
module/cpc/cpcd/hal/: hal_kill.c  hal_kill.h  hal_uart.c  hal_uart.h
module/cpc/cpcd/lib/: libcpc.c  libcpc.h
module/cpc/cpcd/primary/: primary_cpcd.c  primary_cpcd.h
module/cpc/cpcd/primary/cpcd/: cpcd.c  cpcd.h  crc.c  crc.h  hdlc.c  hdlc.h
module/cpc/cpcd/primary/epoll_port/: epoll_port.c  epoll_port.h
module/cpc/cpcd/primary/primary/: primary.c  primary.h
module/cpc/cpcd/primary/system/: callbacks.c  callbacks.h  system.c  system.h
module/cpc/cpcd/utility/: config.c  config.h  endian.h  errcode.c  logs.c  logs.h  sleep.c  sleep.h  slist.c  slist.h  status.h  utils.c  utils.h  version.h.in
module/subg/: CMakeLists.txt  main.c
module/subg/cpc-subg/: CMakeLists.txt
module/subg/cpc-subg/src/: main.c
module/upgrade/: CMakeLists.txt
module/upgrade/src/: ezmesh-upgrade.c
module/upgrade/src/include/: fsm_assist.h
module/zigbee/: CMakeLists.txt
module/zigbee/cpc-zbgw/: CMakeLists.txt
module/zigbee/cpc-zbgw/src/: C2S.c  M2Z.c  Queue.h  S2C.c  Z2M.c  Z2M.h  common.h  coordinator.c  main.c  server.h  system.c
module/zigbee/ezmesh-zbbackup/: CMakeLists.txt
module/zigbee/ezmesh-zbbackup/src/: ezmesh-zbbackup.c
module/zigbee/ezmesh-zbbackup/src/include/: fsm.h
module/zigbee/ezmesh-zbgw/: CMakeLists.txt
module/zigbee/ezmesh-zbgw/src/: C2S.c  C2S.h  M2Z.c  Queue.c  S2C.h  Z2M.c  common.h  coordinator.c  main.c  server.c  setting.ini  system.c
module/zigbee/ezmesh-zbota/: CMakeLists.txt
module/zigbee/ezmesh-zbota/src/: ezmesh-upgrade.c  fsm.c
module/zigbee/ezmesh-zbota/src/include/: fsm.h
module/zigbee/ezmesh-zbota/src/include/termcap/: termcap.h
module/zigbee/ezmesh-zbota/src/progressbar/: progressbar.c
module/zigbee/ezmesh-zbota/src/termcap/: termcap.c
(+56 files in other folders)
